feat(cloudfoundry): add support for manifest random route (#5383)