@@ -33,6 +33,8 @@ import com.netflix.spinnaker.clouddriver.cloudfoundry.client.MockCloudFoundryCli
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.model.v3.ProcessRequest;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.config.CloudFoundryConfigurationProperties;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.description.DeployCloudFoundryServerGroupDescription;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryDomain;
+import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryLoadBalancer;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundryOrganization;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.model.CloudFoundrySpace;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.provider.CloudFoundryProvider;
@@ -80,6 +82,12 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
 
       when(cloudFoundryClient.getApplications().findServerGroupId(any(), any()))
           .thenReturn("servergroup-id");
+
+      when(cloudFoundryClient.getDomains().getDefault())
+          .thenReturn(CloudFoundryDomain.builder().name("cf-app.com").build());
+      when(cloudFoundryClient.getRoutes().find(any(), any()))
+          .thenReturn(CloudFoundryLoadBalancer.builder().build())
+          .thenReturn(null);
     }
 
     return new CloudFoundryCredentials(
@@ -240,7 +248,8 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
             "credentials",
             "test",
             "manifest",
-            ImmutableList.of(ImmutableMap.of("applications", ImmutableList.of(ImmutableMap.of()))));
+            ImmutableList.of(
+                ImmutableMap.of("applications", List.of(Map.of("random-route", true)))));
 
     DeployCloudFoundryServerGroupDescription result = converter.convertDescription(description);
 
@@ -251,6 +260,7 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
     assertThat(result.getApplicationArtifact().getArtifactAccount())
         .isEqualTo("destinationAccount");
     assertThat(result.getApplicationArtifact().getUuid()).isEqualTo("servergroup-id");
+    assertThat(result.getApplicationAttributes().getRoutes()).isNotEmpty();
   }
 
   @Test
@@ -274,5 +284,14 @@ class DeployCloudFoundryServerGroupAtomicOperationConverterTest {
                 .setProcesses(
                     List.of(
                         new ProcessRequest().setType("web").setInstances(2).setMemory("800M"))));
+  }
+
+  @Test
+  void convertRandomRoutes() {
+    DeployCloudFoundryServerGroupDescription.ApplicationAttributes applicationAttributes =
+        converter.convertManifest(
+            ImmutableMap.of("applications", List.of(Map.of("random-route", true))));
+
+    assertThat(applicationAttributes.getRandomRoute()).isTrue();
   }
 }
